force-app/main/default/objects/PAX_Flown_Detail__c/PAX_Flown_Detail__c.object-meta.xml
<CustomObject>
    <label>PAX Flown Detail</label>
    <nameField>
        <displayFormat>PXF-{00000}</displayFormat>
        <label>Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAX Flown Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>