force-app/main/default/objects/PAX_Flown_Detail__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <formula>IF(TEXT(Flight_Scheduling_Type__c)="Schedule",
TEXT(Flight_Area__c),
"Non-Schedule"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area</label>
    <type>Text</type>
</CustomField>