force-app/main/default/objects/PAX_Flown_Detail__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Royal First</fullName>
            </value>
            <value>
                <fullName>Royal Silk</fullName>
            </value>
            <value>
                <fullName>Premium Economy</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>