force-app/main/default/objects/PAX_Flown_Detail__c/fields/Data_Date_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Date_Key__c</fullName>
    <externalId>true</externalId>
    <label>Data Date Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>