force-app/main/default/objects/PAX_Flown_Detail__c/fields/Flight_Area__c.field-meta.xml
<CustomField>
    <fullName>Flight_Area__c</fullName>
    <label>Flight Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Indo-China</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
            <value>
                <fullName>Southern</fullName>
            </value>
            <value>
                <fullName>Northern</fullName>
            </value>
            <value>
                <fullName>Middle-East</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>