force-app/main/default/objects/PAX_Flown_Detail__c/fields/Flight_Scheduling_Type__c.field-meta.xml
<CustomField>
    <fullName>Flight_Scheduling_Type__c</fullName>
    <label>Flight Scheduling Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Non-Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>