force-app/main/default/objects/PAX_Flown_Detail__c/fields/PAX_Flown_Summary__c.field-meta.xml
<CustomField>
    <fullName>PAX_Flown_Summary__c</fullName>
    <label>PAX Flown Summary</label>
    <referenceTo>PAX_Flown_Summary__c</referenceTo>
    <relationshipLabel>PAX Flown Detail</relationshipLabel>
    <relationshipName>PAX_Flown_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>