force-app/main/default/objects/PAX_Flown_Detail__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF(TEXT(Flight_Scheduling_Type__c)="Schedule",
TEXT(Flight_Region__c),
"่Non-Schedule"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>