force-app/main/default/objects/PAX_Flown_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PAX_Flown_Summary__c</columns>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Class__c</columns>
    <columns>Data_Date__c</columns>
    <columns>Data_Date_Key__c</columns>
    <columns>Flight_Area__c</columns>
    <columns>Flight_Region__c</columns>
    <columns>Flight_Scheduling_Type__c</columns>
    <columns>Region__c</columns>
    <columns>Total_Passengers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>